# foray-restir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: foray_example.cmake
data/gltf/outdoorbox/: scene.gltf
data/gltf/testbox/: pillar_room.blend  pillar_room.blend1  pillar_room.gltf  scene.gltf  scene_emissive.gltf  scene_emissive2.gltf
data/scenes/cube/: cube2.gltf
data/scenes/emissive_spheres/: emissive_spheres.gltf
research_apps/complex-raytracer/: foray_complexrtapp.cpp  foray_complexrtapp.hpp  main.cpp
research_apps/complex-raytracer/shaders/: raygen.rgen
research_apps/complex-raytracer/shaders/default/: closesthit.rchit  miss.rmiss
restir_app/: emissive_triangle_mesh_stage.hpp  restir_app.hpp  restirstage.cpp
restir_app/shaders/: raygen.rgen
restir_app/shaders/emissive_triangle_mesh/: etm.vert
restir_app/shaders/restir/: restirUtils2.glsl
sampling_testapp/: main.cpp  sampling_testapp.cpp  sampling_testapp.hpp
sampling_testapp/shaders/default/: anyhit.rahit  brdf_complexraytracer.glsl  closesthit.rchit
sampling_testapp/shaders/visibilitytest/: miss.rmiss  payload.glsl
src/: CMakeLists.txt  emissive_triangle_mesh_stage.cpp  emissive_triangle_mesh_stage.hpp  imgui.ini  main.cpp  prevframecopystage.hpp  restir_app.cpp  restir_app.hpp  restirstage.cpp  restirstage.hpp  structs.hpp
src/shaders/: raygen.rgen
src/shaders/emissive_triangle_mesh/: etm.frag
src/shaders/ray-default/: anyhit.rahit  closesthit.rchit  miss.rmiss
src/shaders/restir/: brdf.glsl  restirUtils.glsl
(+1 files in other folders)
